# argp-standalone

./: CMakeLists.txt  README.md  argp-eexst.c  argp-fmtstream.c  argp-fmtstream.h  argp-help.c  argp-parse.c  argp-test.c  argp-util.c  argp-util.h  argp.h
utils/: getopt.c  getopt.h
